<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCountries">

    <ImageView
        android:id="@+id/ivMainCountries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/maldivies3" />

    <ImageView
        android:id="@+id/ivFrance"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivMainCountries"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="@+id/ivMainCountries"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015"
        app:srcCompat="@drawable/france" />

    <ImageView
        android:id="@+id/ivDominicana"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="248dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toEndOf="@+id/ivFrance"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dominicana" />

    <ImageView
        android:id="@+id/ivAndora"
        android:layout_width="102dp"
        android:layout_height="103dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivDominicana"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/andora" />

    <ImageView
        android:id="@+id/ivTailand"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="45dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tailand" />

    <ImageView
        android:id="@+id/ivEmirates"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="45dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivTailand"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emirates" />

    <ImageView
        android:id="@+id/ivFranceButton"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivFrance"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/my_button_countrynames" />

    <TextView
        android:id="@+id/tvFrance"
        style="@style/Basics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/france"
        app:layout_constraintBottom_toBottomOf="@+id/ivFranceButton"
        app:layout_constraintEnd_toEndOf="@+id/ivFranceButton"
        app:layout_constraintStart_toStartOf="@+id/ivFranceButton"
        app:layout_constraintTop_toTopOf="@+id/ivFranceButton"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="194dp" />

    <ImageView
        android:id="@+id/ivDominicanaButton"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivDominicana"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/my_button_countrynames" />

    <TextView
        android:id="@+id/tvDominicana"
        style="@style/Basics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dominic_republic"
        app:layout_constraintBottom_toBottomOf="@+id/ivDominicanaButton"
        app:layout_constraintEnd_toEndOf="@+id/ivDominicanaButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ivDominicanaButton"
        app:layout_constraintTop_toTopOf="@+id/ivDominicanaButton" />

    <ImageView
        android:id="@+id/ivAndoraButton"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivAndora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/my_button_countrynames" />

    <TextView
        android:id="@+id/tvAndora"
        style="@style/Basics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andorra"
        app:layout_constraintBottom_toBottomOf="@+id/ivAndoraButton"
        app:layout_constraintEnd_toEndOf="@+id/ivAndoraButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ivAndoraButton"
        app:layout_constraintTop_toTopOf="@+id/ivAndoraButton" />

    <ImageView
        android:id="@+id/ivTailandButton"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginStart="95dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivTailand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/my_button_countrynames" />

    <TextView
        android:id="@+id/tvTailand"
        style="@style/Basics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thailand"
        app:layout_constraintBottom_toBottomOf="@+id/ivTailandButton"
        app:layout_constraintEnd_toEndOf="@+id/ivTailandButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ivTailandButton"
        app:layout_constraintTop_toTopOf="@+id/ivTailandButton" />

    <ImageView
        android:id="@+id/ivEmiratesButton"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivEmirates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/my_button_countrynames" />

    <TextView
        android:id="@+id/tvEmirates"
        style="@style/Basics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/emirates"
        app:layout_constraintBottom_toTopOf="@+id/ivEmirates"
        app:layout_constraintEnd_toEndOf="@+id/ivEmiratesButton"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/ivEmiratesButton"
        app:layout_constraintTop_toTopOf="@+id/ivEmiratesButton"
        app:layout_constraintVertical_bias="0.666" />

</androidx.constraintlayout.widget.ConstraintLayout>